# kiwi7

./: .coverage  .dockerignore  .gitignore  CLAUDE.md  README.md  env.sample  list1.html  list_ls_keys.py  pyproject.toml  ruff.toml
.claude/: settings.local.json
.github/: copliot-instruction.md
.github/instructions/: kiwi7-rule.md.instructions.md
backend/: main.py
backend/core/: config.py  dependencies.py  exception_handler.py  exceptions.py  jwtmiddleware.py  kiwi7_db.py  logger.py  security.py  template_engine.py
backend/domains/: stock_api.py
backend/page_contexts/: account_context.py  context_registry.py  settings_context.py  stock_context.py  user_context.py  user_countext.py  user_page.py
backend/utils/: acct_summary.py  kiwi_utils.py  naver_utils.py
code_samples/: api2.py  api3.py  extract_kis_resp_def.py  extract_kw_resp_def.py  extract_ls_req_resp_def.py  kiwoom_api_temp.html  ws0.py  ws1.py
docs/: kis.md  kis_req_1.output  kis_req_2.output  kis_req_3.output  kis_req_4.output  kis_req_5.output  kis_req_6.output  kis_req_7.output  kis_resp_1.output  kis_resp_2.output  kis_resp_3.output  kis_resp_4.output  kis_resp_5.output  kis_resp_6.output  kis_resp_7.output  ls_1.output  ls_1_page.html  prompts.md  tech-note.md  templates.md  설계.md
frontend/views/: error.html  login.html  login0.html  main.html  main0.html  main1.html
html_samples/: GEMINI.md
sqls/: kiwi7_ddl.sql
tests/: conftest.py
tools/: test_acct_summary.py  test_kis_balance.py  test_kiwoom_ka10086.py  test_ls_balance.py  test_ls_t8410.py  test_prev_price_cache.py
(+198 files in other folders)
