[project]
name = "kiwi7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "beautifulsoup4>=4.13.4",
    "concurrent-log-handler>=0.9.28",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.1.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "uvicorn>=0.35.0",
]
